2009-07-07  Omair Majid  <omajid@redhat.com>

	* netx/net/sourceforge/jnlp/resources/Messages.properties: Add
	RNestedJarExtration.
	* netx/net/sourceforge/jnlp/runtime/JNLPClassLoader.java
	(activateJar): Create parent directories for nested jars.

2009-06-24  Omair Majid  <omajid@redhat.com>

	* netx/net/sourceforge/jnlp/security/CertWarningPane.java
	(installComponents): Call SecurityUtil.getCN instead of getCN.
	(getCN): Removed.
	* netx/net/sourceforge/jnlp/security/CertsInfoPane.java
	(buildTree): Call SecurityUtil.getCN instead of getCN.
	(populateTable): Likewise.
	(getCN): Removed.
	* netx/net/sourceforge/jnlp/security/SecurityUtil.java
	(getCN): Follow RFC 2253 partially and understand escaping.
	(isHexDigit): New function.
	* netx/net/sourceforge/jnlp/security/SingleCertInfoPane.java
	(buildTree): Call SecurityUtil.getCN instead of getCN.
	(populateTable): Likewise.
	* netx/net/sourceforge/jnlp/tools/KeyTool.java:
	(doPrintEntry): Call SecurityUtil.getCN instead of getCN.
	(getCN): Removed. 

2009-06-24  Omair Majid  <omajid@redhat.com>

	* netx/net/sourceforge/jnlp/Launcher.java
	(createApplication): Fix messages to refer to application instead of
	applet.

2009-06-24  Omair Majid  <omajid@redhat.com>

	* netx/net/sourceforge/jnlp/Launcher.java (launchApplication): Check for any 
	existing single instance.  Dont start a second instance.
	* netx/net/sourceforge/jnlp/resources/Messages.properties: Add RNoLockDir.
	* netx/net/sourceforge/jnlp/runtime/JNLPRuntime.java:
	Added USER, TMP_DIR, and changed LOCKS_DIR.
	* netx/net/sourceforge/jnlp/services/ExtendedSingleInstanceService.java
	New file.
	* netx/net/sourceforge/jnlp/services/InstanceExistsException.java: New file.
	* netx/net/sourceforge/jnlp/services/ServiceUtil.java
	(getSingleInstanceService): New function.
	(checkExistingSingleInstance): New function.
	* netx/net/sourceforge/jnlp/services/SingleInstanceLock.java: New file.
	* netx/net/sourceforge/jnlp/services/XServiceManagerStub.java: Add